css/styles.css
/* === Defaults === */
* {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
}
:root {
  color: #000;
  background-color: #FFF;
  height: 100%;
}
body {
  min-height: 100%;
  font-family: sans-serif;
  background-color: #4FA5C8; /* Boston blue */
}

/* === Custom === */
.headline {
  font-size: 2.5rem;
}
.chapter {
  font-size: 2rem;
}
.title {
  font-size: 1.5rem;
}
.subtitle {
  font-size: 1rem;
}
.content-box {
  padding: 8px;
}
.line--centered {
  text-align: center;
}
ul.h-menu {
  padding: 8px;
  list-style-type: none;
}
.h-menu li {
  display: inline-block;
  margin-right: 8px;
  padding: 8px;
  background-color: #fff;
  border-radius: 5px;
}
.h-menu li.active {
  background-color: #EFF0F1; /* White smoke */
}
.h-menu li.active a {
  font-style: italic;
}
.h-menu a {
  text-decoration: none;
}

/* === Generic/Custom === */
h1, h2, h3, h4, p {
  margin-bottom: 10px;
}
p {
  line-height: 1.3;
}
main {
  /* Less wide and horizontally centered (margin) */
  width: 70%;
  margin: 0 auto;
  border-radius: 8px;
  background-color: #EFF0F1; /* White smoke */
}

